--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -8,6 +8,12 @@
       自助大丈夫：Distance Matrix API
     </title>
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+      integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
+      crossorigin="anonymous"
+    />
+    <link
       rel="canonical"
       href="https://letswrite.tw/google-map-api-distance-matrix/"
     />
@@ -82,7 +88,7 @@
       <!-- 景點查詢 -->
       <attraction-list></attraction-list>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVE3uJnGBC-aSoc_OTsrjJo7cUZBez4uo"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVE3uJnGBC-aSoc_OTsrjJo7cUZBez4uo"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
@@ -123,11 +129,15 @@
                   <div class="container">
                     <div class="row">
                       <div class="border col-md-4">
-                        <attraction-direction @ghi="removeSelectedAttraction" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction"></attraction-direction>
+                        <div class="d-flex">
+                        <input type="text" class="w-100 border-top-0 border-left-0 border-right-0 form-control" placeholder="行程名稱">
+                          <i class="my-auto far fa-save mx-1 text-black-50"></i><i class="my-auto fas fa-trash-alt mx-1 text-black-50"></i>
+                          </div>
+                        <attraction-direction @ghi="removeSelectedAttraction" class="border" v-for="selectedAttraction in selectedAttractions" v-bind:label2="selectedAttraction">
+                        </attraction-direction>
                       </div>
                       <div class="border col-md-8 px-0" style="height:400px">
                         <div id="map" class="embed-responsive embed-responsive-16by9"></div>
-                        <attraction-mark v-for="selectedAttraction in selectedAttractions" v-bind:label3="selectedAttraction"></attraction-mark>
                       </div>
                     </div>
                   </div>
@@ -215,7 +225,6 @@
         methods: {
           sendSelectedAttractionToAttractionList() {
             this.$emit("def", this.label);
-            // console.log(this.label);
           },
         },
       });
@@ -237,29 +246,6 @@
             this.$emit("ghi", this.label2);
           },
         },
-      });
-
-      Vue.component("attraction-mark", {
-        //   template: `
-        // <div id="map" class="embed-responsive embed-responsive-16by9"></div>
-        // `,
-        props: ["label3"],
-        data() {
-          return {
-            // map: null,
-            // mapCenter: {
-            //     lat: 25.0374865,
-            //     lng: 121.5647688,
-            // },
-          };
-        },
-        methods: {},
-        // mounted() {
-        //     this.map = new google.maps.Map(document.getElementById("map"), {
-        //         center: this.mapCenter,
-        //         zoom: 16,
-        //     });
-        // },
       });
 
       //Reference///////////////////////////////////////////////////////////////////////////////////////
