--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -166,7 +166,9 @@
             },
             markers: [],
             toBeSavedSchedule: {
+              MemNO: "",
               scheName: "",
+              scheStatus: "",
             },
           };
         },
@@ -221,11 +223,17 @@
           },
           saveSchedule() {
             // check if log in:
-            // check shceName and input scheName to toBeSavedSchedule:
+            // check if shceName and any attraction in direction:
             if (this.toBeSavedSchedule.scheName == "") {
               alert("請輸入行程名稱");
+            } else if (this.selectedAttractions.length == 0) {
+              alert("請輸入至少一個景點");
             } else {
-              alert(this.toBeSavedSchedule.scheName);
+              //setting scheStatus:
+              confirm("請問是否完成行程編輯？") == true
+                ? (this.toBeSavedSchedule.scheStatus = 1)
+                : (this.toBeSavedSchedule.scheStatus = 0);
+              alert(this.toBeSavedSchedule.scheStatus);
             }
             // build toBeSavedSchedule:
           },
