--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -234,12 +234,14 @@
               alert("請輸入至少一個景點");
             } else {
               //input scheStatus:
-              confirm("請問是否完成行程編輯？")
+              confirm("已完成行程編輯？")
                 ? (this.toBeSavedSchedule.scheStatus = 1)
                 : (this.toBeSavedSchedule.scheStatus = 0);
               alert(this.toBeSavedSchedule.scheStatus);
               // input selectedAttractions:
               this.toBeSavedSchedule.selectedAttractions = this.selectedAttractions;
+              // send selectedAttractions to backend:
+              $.post("saveSchedule.php", this.toBeSavedSchedule);
             }
             console.log(this.toBeSavedSchedule);
           },
