--- a/dev/member.html
+++ b/dev/member.html
@@ -9,6 +9,9 @@
     <div id="spotLightBox" class="lightBoxWall">
       @@include('./htmlTemplate/SpotLightBox.html')
     </div>
+    <div id="scheLightBox" class="lightBoxWall">
+      @@include('./htmlTemplate/ScheLightBox.html')
+    </div>
   </body>
   <script src="./js/member.js"></script>
 
