insert scheNO to attrac_sche from sche

--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -247,7 +247,7 @@
                 dataType: "json",
               });
             }
-            console.log(this.toBeSavedSchedule);
+            // console.log(this.toBeSavedSchedule);
           },
         },
         mounted() {
